--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# directories
+build/
+nbproject/
+
 # Compiled class file
 *.class
 
@@ -11,7 +15,7 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
+#*.jar
 *.war
 *.nar
 *.ear
